--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
